@@ -1,5 +1,12 @@
 2008-08-27  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimptransformtool.c: moved hiding the dialog from 
+	gimp_transform_tool_real_transform() to gimp_transform_tool_doit().
+	Delay undrawing the preview in doit() until the transformation is
+	done. This removes the annoying flicker at the end.
+
+2008-08-27  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimptransformtool.c (gimp_transform_tool_real_transform):
 	hide the tool dialog before starting to perform the transformation.
 
